SonnarQube recommended issues (Major and Critical)